[gd_scene load_steps=10 format=3 uid="uid://elwjvp2ru3iq"]

[ext_resource type="Script" uid="uid://dp0gexuqn6x23" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://bjgm20gfnturd" path="res://scenes/Magic.tscn" id="2_dqkch"]
[ext_resource type="Texture2D" uid="uid://dc6a3tcbuk2hi" path="res://icon.svg" id="2_qhqgy"]
[ext_resource type="AudioStream" uid="uid://bvy3571bqa5xj" path="res://sounds/arcane_sfx_sword1.wav" id="4_qlg0r"]
[ext_resource type="AudioStream" uid="uid://b81b3pqmnl51o" path="res://sounds/arcane_sfx_gun1.wav" id="5_tuyoq"]
[ext_resource type="AudioStream" uid="uid://c5mtxbfhyspb8" path="res://sounds/arcane_sfx_jump1.wav" id="6_fjrip"]
[ext_resource type="AudioStream" uid="uid://dpg3wsswlwec6" path="res://sounds/arcane_sfx_steps1.wav" id="7_smehm"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ig7tw"]
size = Vector3(0.259491, 0.256103, 0.153107)

[sub_resource type="SphereShape3D" id="SphereShape3D_qhqgy"]
radius = 0.0653703

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_g2els")
magic_scene = ExtResource("2_dqkch")

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
billboard = 1
texture = ExtResource("2_qhqgy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000686709, 0.0013428, -0.000289917)
shape = SubResource("BoxShape3D_ig7tw")

[node name="CameraTop" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 30, 0)
projection = 1
size = 2.0

[node name="CameraController" type="Node3D" parent="."]
top_level = true

[node name="CameraSide" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30)
projection = 1
current = true
size = 2.0

[node name="MeleeHitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeHitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.216021, 0, 0)
shape = SubResource("SphereShape3D_qhqgy")

[node name="Sprite3D" type="Sprite3D" parent="MeleeHitbox"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.21768, 0, 0)
texture = ExtResource("2_qhqgy")

[node name="magicSpawner" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.221329, 0, 0)

[node name="MagicSoundPLayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_tuyoq")

[node name="MeleeSoundPLayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_qlg0r")

[node name="JumpSoundPLayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_fjrip")

[node name="FootstepSoundPLayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_smehm")

[connection signal="timeout" from="CoyoteTimer" to="." method="on_coyote_timeout"]
